--- a/substrate-node-template/pallets/kitties/Cargo.toml
+++ b/substrate-node-template/pallets/kitties/Cargo.toml
@@ -16,6 +16,10 @@ targets = ['x86_64-unknown-linux-gnu']
 default-features = false
 version = '1.0.129'
 
+[dependencies.log]
+default-features = false
+version = '0.4.14'
+
 [dependencies.codec]
 default-features = false
 features = ['derive']
